--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="container bloc-sm">
 						<nav class="navbar row">
 							<div class="navbar-header">
-								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo La chouette agence" /></a>
+								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo de La chouette agence" /></a>
 								<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 									<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 								</button>
@@ -52,7 +52,7 @@
 					<div class="container bloc-lg">
 						<div class="row tight-width-whitespace">
 							<div class="col-sm-12">
-								<img src="images/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence" />
+								<img src="images/logo.png" class="center-block image-resize-mode" alt="Variation logo de La chouette agence" />
 								<h1 class="text-center hero-bloc-text tc-white ">
 									Agence web design - Lyon
 								</h1>
@@ -153,7 +153,7 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="images/1.jpg" class="img-responsive portfolio-thumb" alt="Journaux empiles"  /></a>
+								<a href="#" data-lightbox="images/site-web-journal-local.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="images/site-web-journal-local.jpg" class="img-responsive portfolio-thumb" alt="Journal local" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Refonte d'un site web pour un journal local
 								</h3>
@@ -162,7 +162,7 @@
 								</p>
 							</div>
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="images/2.jpg" class="img-responsive portfolio-thumb" alt="Photographe" /></a>
+								<a href="#" data-lightbox="images/site-web-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="images/site-web-photographe.jpg" class="img-responsive portfolio-thumb" alt="Photographe en train de prendre une photo" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Création d'un site web pour photographes
 								</h3>
@@ -173,7 +173,7 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="images/3.jpg" class="img-responsive portfolio-thumb" alt="Voyage" /></a>
+								<a href="#" data-lightbox="images/site-web-voyage.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="images/site-web-voyage.jpg" class="img-responsive portfolio-thumb" alt="Matériel vidéo pour un voyageur" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Création d'un site internet pour un voyageur
 								</h3>
@@ -182,7 +182,7 @@
 								</p>
 							</div>
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="images/4.jpg" class="img-responsive portfolio-thumb" alt="Agence de mariage" /></a>
+								<a href="#" data-lightbox="images/site-web-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="images/site-web-mariage.jpg" class="img-responsive portfolio-thumb" alt="Planification d'un mariage" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Conception d'un site pour une agence de mariage
 								</h3>
