Renamed other files images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<div class="container bloc-sm">
 						<nav class="navbar row">
 							<div class="navbar-header">
-								<a class="navbar-brand" href="index.html"><img src="images/la-chouette-agence.png" alt="Logo de La chouette agence" /></a>
+								<a class="navbar-brand" href="index.html"><img src="images/logo-la-chouette-agence.png" alt="Logo de La chouette agence" /></a>
 								<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 									<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 								</button>
@@ -52,7 +52,7 @@
 					<div class="container bloc-lg">
 						<div class="row tight-width-whitespace">
 							<div class="col-sm-12">
-								<img src="images/logo.png" class="center-block image-resize-mode" alt="Variation logo de La chouette agence" />
+								<img src="images/logo-la-chouette-agence2.png" class="center-block image-resize-mode" alt="Variation logo de La chouette agence" />
 								<h1 class="text-center hero-bloc-text tc-white ">
 									Agence web design - Lyon
 								</h1>
@@ -195,10 +195,10 @@
 							<div>
 								<h2>Nos Partenaires :</h2>
 								<div class="partenaires_logo">
-									<a href=""><img src="images/logo_voiture.png" alt="Logo Voiture"></a>
-									<a href=""><img src="images/logo_pizza.png" alt="Logo Pizza"></a>
-									<a href=""><img src="images/logo_matoiture.png" alt="Logo MaToiture"></a>
-									<a href=""><img src="images/logo_immobilier.png" alt="Logo Immobilier"></a>
+									<a href=""><img src="images/logo-partenaire-voiture.png" alt="Logo Voiture"></a>
+									<a href=""><img src="images/logo-partenaire-pizza.png" alt="Logo Pizza"></a>
+									<a href=""><img src="images/logo-partenaire-matoiture.png" alt="Logo MaToiture"></a>
+									<a href=""><img src="images/logo-partenaire-immobilier.png" alt="Logo Immobilier"></a>
 								</div>
 							</div>
 						</div>
