--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 							<div class="col-sm-12">
 								<img src="images/logo-la-chouette-agence2.png" class="center-block image-resize-mode" alt="Variation logo de La chouette agence" />
 								<h1 class="text-center hero-bloc-text tc-white ">
-									Agence web design - Lyon
+									La chouette agence<br>
+									web design - Lyon
 								</h1>
 								<div class="text-center">
 									<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
