--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/site-web-journal-local.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="images/site-web-journal-local.jpg" class="img-responsive portfolio-thumb" alt="Journal local" /></a>
+								<a href="#" data-lightbox="images/site-web-journal-local.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="images/site-web-journal-local-thumbnail.jpg" class="img-responsive portfolio-thumb" alt="Journal local" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Refonte d'un site web pour un journal local
 								</h3>
@@ -163,7 +163,7 @@
 								</p>
 							</div>
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/site-web-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="images/site-web-photographe.jpg" class="img-responsive portfolio-thumb" alt="Photographe en train de prendre une photo" /></a>
+								<a href="#" data-lightbox="images/site-web-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="images/site-web-photographe-thumbnail.jpg" class="img-responsive portfolio-thumb" alt="Photographe en train de prendre une photo" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Création d'un site web pour photographes
 								</h3>
@@ -174,7 +174,7 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/site-web-voyage.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="images/site-web-voyage.jpg" class="img-responsive portfolio-thumb" alt="Matériel vidéo pour un voyageur" /></a>
+								<a href="#" data-lightbox="images/site-web-voyage.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="images/site-web-voyage-thumbnail.jpg" class="img-responsive portfolio-thumb" alt="Matériel vidéo pour un voyageur" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Création d'un site internet pour un voyageur
 								</h3>
@@ -183,7 +183,7 @@
 								</p>
 							</div>
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="images/site-web-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="images/site-web-mariage.jpg" class="img-responsive portfolio-thumb" alt="Planification d'un mariage" /></a>
+								<a href="#" data-lightbox="images/site-web-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="images/site-web-mariage-thumbnail.jpg" class="img-responsive portfolio-thumb" alt="Planification d'un mariage" /></a>
 								<h3 class="mg-md text-center tc-dark-tangerine">
 									Conception d'un site pour une agence de mariage
 								</h3>
