--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 					<div class="container bloc-sm">
 						<div class="row">
 							<div class="col-sm-12">
-								<p class="text-center tc-white">
+								<p class="text-center tc-dark">
 									La chouette agence - Agence web basée à Lyon<br>
 								</p>
 								<div class="row row-no-gutters social">
@@ -265,24 +265,10 @@
 										Annuaires 
 										<ul>
 											<li>annuaireagence.com</li>
-											<!-- <li>annuaireseo.com</li> -->
 											<li>annuairemarketing.com</li>
-											<!-- <li>123seo.com</li> -->
 											<li>listeagence.com</li>
-											<!-- <li>listeseo.com</li> -->
 										</ul>
 									</div>
-									<!-- <div class="col-sm-4">
-										Annuaires 
-										<ul>
-											<li>betterseo.com</li>
-											<li>ameliorerseo.com</li>
-											<li>seojuicelien.com</li>
-											<li>meilleursliens.com</li>
-											<li>linkjuiceannuaire.com</li>
-											<li>vraiseofiable.com</li>
-										</ul>
-									</div> -->
 								</div>
 							</div>
 						</div>
