--- a/contact.html
+++ b/contact.html
@@ -75,19 +75,19 @@
 							<div class="col-sm-6">
 								<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 									<div class="form-group">
-										<label for="name">Nom</label>
+										<label for="name">Nom *</label>
 										<input id="name" class="form-control" required />
 									</div>
 									<div class="form-group">
-										<label for="email">Adresse e-mail</label>
+										<label for="email">Adresse e-mail *</label>
 										<input id="email" class="form-control" type="email" required />
 									</div>
 									<div class="form-group">
-										<label for="input_504">Comment nous avez-vous connu ?</label>
+										<label for="input_504">Comment nous avez-vous connu ? *</label>
 										<input id="input_504" class="form-control" type="email" required />
 									</div>
 									<div class="form-group">
-										<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br/></label>
+										<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire) *<br/></label>
 										<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 									</div> 
 									<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
@@ -121,7 +121,7 @@
 						<div class="row">
 							<div class="col-sm-12">
 								<p class="text-center tc-dark">
-									La chouette agence - Agence web basée à Lyon<br/>
+									La chouette agence - Agence web basée à Lyon<br>
 								</p>
 								<div class="row row-no-gutters social">
 									<div class="col-sm-3">
@@ -143,6 +143,16 @@
 										<div class="text-center">
 											<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 										</div>
+									</div>
+								</div>
+								<div class="row annuaires">
+									<div class="col-sm-4">
+										Annuaires 
+										<ul>
+											<li><a href="annuaireagence.com">annuaireagence.com</a></li>
+											<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
+											<li><a href="listeagence.com">listeagence.com</a></li>
+										</ul>
 									</div>
 								</div>
 							</div>
