--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									web design - Lyon
 								</h1>
 								<div class="text-center">
-									<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+									<a href="contact.html" class="btn btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 								</div>
 							</div>
 						</div>
@@ -217,7 +217,7 @@
 								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 							</h2>
 							<div class="col-sm-12 text-center">
-								<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -241,22 +241,22 @@
 								<div class="row row-no-gutters social">
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+											<a class="social" title="Twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+											<a class="social" title="Facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+											<a class="social" title="Dribble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+											<a class="social" title="Instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 										</div>
 									</div>
 								</div>
@@ -264,9 +264,9 @@
 									<div class="col-sm-4">
 										Annuaires 
 										<ul>
-											<li>annuaireagence.com</li>
-											<li>annuairemarketing.com</li>
-											<li>listeagence.com</li>
+											<li><a href="annuaireagence.com">annuaireagence.com</a></li>
+											<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
+											<li><a href="listeagence.com">listeagence.com</a></li>
 										</ul>
 									</div>
 								</div>
