Annuaries links corrected

--- a/contact.html
+++ b/contact.html
@@ -149,9 +149,9 @@
 									<div class="col-sm-4">
 										Annuaires 
 										<ul>
-											<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-											<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-											<li><a href="listeagence.com">listeagence.com</a></li>
+											<li><a href="">annuaireagence.com</a></li>
+											<li><a href="">annuairemarketing.com</a></li>
+											<li><a href="">listeagence.com</a></li>
 										</ul>
 									</div>
 								</div>
